Added quiz and some more fragments to HelloWorld intrinsic slides and updated build instructions in Readme.txt